WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116830
[EFL][WK2] Custom context menu items cannot be selected
https://bugs.webkit.org/show_bug.cgi?id=116830
Summary
[EFL][WK2] Custom context menu items cannot be selected
Michal Pakula vel Rutka
Reported
2013-05-27 08:38:14 PDT
Custom context menu elements implementation should be improved: - appended custom menu items should have parent menu, - appended submenu type item's menu should have a pointer to EwkViev - sub menu item should be created only using ewk_context_menu_item_new_with_submenu - item with submenu should be only of EWK_SUBMENU_TYPE
Attachments
patch
(3.48 KB, patch)
2013-05-29 06:36 PDT
,
Michal Pakula vel Rutka
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(479.67 KB, application/zip)
2013-05-29 08:25 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Michal Pakula vel Rutka
Comment 1
2013-05-29 06:36:20 PDT
Created
attachment 203194
[details]
patch
Build Bot
Comment 2
2013-05-29 08:25:50 PDT
Comment on
attachment 203194
[details]
patch
Attachment 203194
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/750199
New failing tests: fast/dom/location-new-window-no-crash.html
Build Bot
Comment 3
2013-05-29 08:25:52 PDT
Created
attachment 203203
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Gyuyoung Kim
Comment 4
2013-05-30 21:51:58 PDT
Comment on
attachment 203194
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=203194&action=review
> Source/WebKit2/UIProcess/API/efl/ewk_context_menu.cpp:99 > + if (!m_viewImpl)
Should we change return type from *void* to *bool* ? See also :
https://bugs.webkit.org/show_bug.cgi?id=117014#c2
Michal Pakula vel Rutka
Comment 5
2013-06-03 04:47:53 PDT
Comment on
attachment 203194
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=203194&action=review
>> Source/WebKit2/UIProcess/API/efl/ewk_context_menu.cpp:99 >> + if (!m_viewImpl) > > Should we change return type from *void* to *bool* ? > > See also :
https://bugs.webkit.org/show_bug.cgi?id=117014#c2
I am changing it to bool here, only because of API documentation saying 'return EINA_TRUE on success or EINA_FALSE on failure', as returning true when menu is invalid (does not have pointer to EwkView), and cannot be selected, may be confusing.
Gyuyoung Kim
Comment 6
2013-06-04 01:34:14 PDT
Comment on
attachment 203194
[details]
patch Looks OK. However, someone might have a final look before landing.
Chris Dumez
Comment 7
2013-06-04 01:40:58 PDT
Comment on
attachment 203194
[details]
patch LGTM.
Gyuyoung Kim
Comment 8
2013-06-04 01:43:15 PDT
(In reply to
comment #3
)
> Created an attachment (id=203203) [details] > Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 > > The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. > Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Unrelated this patch.
WebKit Commit Bot
Comment 9
2013-06-04 02:04:10 PDT
Comment on
attachment 203194
[details]
patch Clearing flags on attachment: 203194 Committed
r151162
: <
http://trac.webkit.org/changeset/151162
>
WebKit Commit Bot
Comment 10
2013-06-04 02:04:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug