[EFL][WK2] Custom context menu items cannot be selected https://bugs.webkit.org/show_bug.cgi?id=116830

Patch by Michał Pakuła vel Rutka <m.pakula@samsung.com> on 2013-06-04
Reviewed by Gyuyoung Kim.

Custom item added using ewk_context_menu_item_append had no
pointer to parent menu, and custom submenu added using with the
the same function had no pointer to EwkView. Both issues
prevented items to be selected.

* UIProcess/API/efl/ewk_context_menu.cpp:
(EwkContextMenu::appendItem):
(EwkContextMenu::contextMenuItemSelected):
(ewk_context_menu_item_append):
(ewk_context_menu_item_select):
* UIProcess/API/efl/ewk_context_menu_private.h:
(EwkContextMenu):
(EwkContextMenu::setEwkView):

Canonical link: https://commits.webkit.org/135445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151162 268f45cc-cd09-0410-ab3c-d52691b4dbfc